--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# I do not want to track the following files in my repo:
+password.txt
+
+# I also do not want to track the following directories:
+do_not_track/
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
